syntax = "proto3";
package indiemotion.protobuf.payloads.v1;

message Acknowledge {
  bool ok = 1;
  string message = 2;
}

message Error {
  string type = 10;
  string message = 11;
}

message GetCameraList {}

message SetActiveCamera
{
  string camera_id = 10;
}

message Camera { string id = 10; }

message CameraList { repeated Camera cameras = 1; }

message SessionServerInfo {
  string id = 10;
  string api_version = 20;
  uint32 features = 30;
}

message SessionProperties {}

message SessionStart
{
  SessionServerInfo server_info = 10;
}

message SessionActivate
{
  SessionProperties session_properties = 10;
}

message SessionShutdown {}

enum MotionMode {
  Off = 0;
  Live = 1;
  Recording = 2;
}

message MotionActiveMode { MotionMode mode = 1; }

message MotionSetMode { MotionMode mode = 1; }

message MotionGetMode { MotionMode mode = 1; }

message XFormData {
  double x = 1;
  double y = 2;
  double z = 3;
}

message MotionXForm {
  XFormData translation = 1;
  XFormData orientation = 2;
}
